almost complted development of frontend part

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -199,4 +199,7 @@
   .flex-between {
     @apply flex justify-between items-center;
   }
+  .flex-center {
+    @apply flex justify-center items-center;
+  }
 }
